@@ -1,3 +1,7 @@
+2017-07-28  Tamar Christina  <tamar.christina@arm.com>
+
+	* gcc.target/aarch64/int_mov_immediate_1.c: New.
+
 2017-07-28  Bin Cheng  <bin.cheng@arm.com>
 
 	* gcc.dg/vect/pr80815-3.c: Require vect_perm.
